syntax = "proto3";
option go_package = "./;jpb";

import "common.proto";

message LoginReq {}

message LoginRsp {
    CODE code = 1;
}

message ScoreReq {
    uint32 uid = 1;
}

message ScoreRsp {
    CODE code = 1;
    uint32 score = 2;
}

message AddScoreReq {
    uint32 uid = 1;
    int32 add = 2;
}

message AddScoreRsp {
    CODE code = 1;
    uint32 score = 2;
}

message ModifyScoreReq {
    uint32 uid = 1;
    uint32 score = 2;
}

message ModifyScoreRsp {
    CODE code = 1;
}

message Media {
    bytes image = 1;
    bytes video = 2;
}

message SwiperListReq {}

message SwiperListRsp {
    CODE code = 1;
    map<uint32, uint32> mUids = 8;
}

message UploadSwiperReq {
    Media media = 1;
}

message UploadSwiperRsp {
    CODE code = 1;
}

message DeleteSwiperReq {
    uint32 uid = 1;
}

message DeleteSwiperRsp {
    CODE code = 1;
}

message Good {
    uint32 uid = 1;             // uid
    string name = 2;            // 名称
    string desc = 3;            // 描述
    string size = 4;            // 尺码
    uint32 oprice = 5;          // 原价
    uint32 price = 6;           // 价格
    repeated Media medias = 7;  // 媒体
    map<uint32, uint32> mUids = 8;
    string kind = 9;            // 商品类别
}

message GoodListReq {}

message GoodListRsp {
    CODE code = 1;
    repeated Good goods = 2;
}

message UploadGoodReq {
    Good good = 1;
}

message UploadGoodRsp {
    CODE code = 1;
}

message ModifyGoodReq {
    Good good = 1;
}

message ModifyGoodRsp {
    CODE code = 1;
}

message DeleteGoodReq {
    uint32 uid = 1;
}

message DeleteGoodRsp {
    CODE code = 1;
}

message ImageReq {
    uint32 uid = 1;
}

message ImageRsp {
    CODE code = 1;
    bytes image = 2;
}

message VideoReq {
    uint32 uid = 1;
    uint32 start = 2;
    uint32 end = 3;
}

message VideoRsp {
    CODE code = 1;
    uint32 size = 2;
    bytes video = 3;
}